# environment-detector

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md
.circleci/: config.yml
.github/: CODEOWNERS
src/: detector.rs  env.rs  env_vars.rs  environment.rs  error.rs  lib.rs  main.rs  smbios.rs  specificity.rs  specificity_matrix.txt
src/providers/: env.rs  mod.rs
src/providers/aws/: mod.rs
src/providers/azure/: mod.rs
src/providers/gcp/: mod.rs
src/providers/kubernetes/: mod.rs
src/providers/nomad/: mod.rs
src/providers/qemu/: mod.rs
