[package]
name = "apollo-environment-detector"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.159"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
rstest = "0.23.0"
