[package]
name = "apollo-environment-detector"
version = "0.1.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"
description = "Library for detecting different compute environments"
license = "MIT OR ELv2"
repository = "https://github.com/apollographql/environment-detector"

[target.'cfg(unix)'.dependencies]
libc = "0.2.159"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
rstest = "0.23.0"
